src/test/resources/plang-strict/passing/005_booltype_name.plang
**#'Logikai' should be accepted as valid typename
Program testing
  Változók:
    a: Logikai,
    b: Egész

  b := 4
program_vége
