src/test/resources/plang-strict/parse-error/009_random_typename_should_cause_error.plang
**#'Nonesuch' is not a valid typename, should cause an error
**FirstErrorLoc:5,8
Program testing
  Változók:
    a: Nonesuch,
    b: Egész

  b := 4
program_vége
